# rustic-gui

./: .gitignore  .prettierrc  .projVault  ANPASSUNGS_EMPFEHLUNGEN.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DIALOG_FIX.md  INTEGRATION_SUMMARY.md  LICENSE  PROJECT_STATUS.md  PROJEKT_ANALYSE.md  README.md  ROADMAP.md  TESTING_GUIDE.md  TEST_PLAN.md  TODO.md  clippy.toml  eslint.config.js  package-lock.json  package.json  rustfmt.toml  td.md  test-badge.svelte  vitest.config.ts
.github/: copilot-instructions.md  rustic_gui_roadmap.md
.github/instructions/: architecture.instructions.md  backend.instructions.md  backup-restore-snapshots.instructions.md  backup-restore-snapshots.instructions.md.md  code-style.instructions.md  copilot-instructions.md  frontend.instructions.md  patterns.instructions.md  testing.instructions.md  troubleshooting.instructions.md  workflow.instructions.md
docs/archive/: README.md  (+6 more)
scripts/: generate-icons.sh
src/: app.css  app.html  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/commands/: backup.rs  mod.rs  repository.rs  restore.rs  retention.rs  settings.rs  snapshot.rs  system.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/rustic/: backup.rs  mod.rs  repository.rs  restore.rs  snapshot.rs
src-tauri/src/rustic/backends/: mod.rs  opendal.rs  rclone.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/storage/: mod.rs  portable.rs
src-tauri/tests/: integration_tests.rs  snapshot_tests.rs
(+112 files in other folders)
