[package]
name = "rustic-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustic_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-opener = "2.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
toml = "0.9.8"
dirs = "6.0.0"
# Rustic dependencies
rustic_core = "0.8.0"
rustic_backend = "0.5.3"
librclone = "0.9.0"
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
# Additional utilities
anyhow = "1.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-cron-scheduler = "0.15.0"
keyring = "3.6.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

